k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pk-portal-app
  namespace: pk-portal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pk-portal-app
  template:
    metadata:
      labels:
        app: pk-portal-app
    spec:
      containers:
        - name: app
          image: pk-portal:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 20
