k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pk-portal-app
  namespace: pk-portal
spec:
  selector:
    app: pk-portal-app
  ports:
    - port: 80
      targetPort: 3001
  type: ClusterIP
